# MODDABLE_RPG

./: .gitignore  README.md  default.workspace  default.workspace.layout
GAME/: CMakeLists.txt
GAME/include/: collider.hpp  gameObject.hpp  goManager.hpp  modManager.hpp  rigidBody.hpp
GAME/run/: GAME
GAME/run/worlds/: map.txt
GAME/src/: WorldLoader.cpp  collider.cpp  main.cpp  modManager.cpp
MAIN/: CMakeLists.txt
MAIN/include/: Tile.hpp  door.hpp  generic_wall.hpp  main.h  player.hpp
MAIN/src/: Tile.cpp  door.cpp  generic_wall.cpp  main.cpp  player.cpp
MODDING_API/: CMakeLists.txt
MODDING_API/include/: ModdingAPI.hpp
MODDING_API/src/: ModdingAPI.cpp
